<resources>
    <string name="app_name" translatable="false">Smart Receipts</string>
    <string name="sr_app_name" translatable="false">Smart Receipts</string>
	<string name="package_name" translatable="false">wb.receipts</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_categories">Categories</string>
    <string name="menu_main_csv">Customize CSV Output</string>
    <string name="menu_main_pdf">Customize PDF Output</string>
    <string name="menu_main_export">Backup</string>
    <string name="menu_main_about">About</string>
	<string name="add">Add</string>
	<string name="add_item">Add %s</string>
	<string name="category">Category</string>
	<string name="column">Column</string>
	<string name="column_item">Column %s</string>
	<string name="copy">Copy</string>
	<string name="daily_total">Daily Total: %s</string>
	<string name="day">%s Day</string>
	<string name="days">%s Days</string>
	<string name="default_currency">Default Currency: </string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete %s?</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="feedback">%s - Feedback</string>
    <string name="image">Image</string>
    <string name="import_string">Import</string>
    <string name="item_code">Code:</string>
    <string name="item_name">Name:</string>
    <string name="move">Move</string>
    <string name="move_copy_item">Move/Copy %s?</string>
    <string name="next_id">Next ID: %s</string>
    <string name="no">No</string>
    <string name="pdf">PDF</string>
    <string name="report">Report</string>
    <string name="report_attached">1 report attached</string>
    <string name="reports_attached">%s report attached</string>
    <string name="receipt">Receipt</string>
    <string name="save">Save</string>
    <string name="send_file">Get File&#8230;</string>
    <string name="send_email">Send Email&#8230;</string>
    <string name="support">%s - Support</string>
    <string name="total_item">Total: %s</string>
    <string name="text">Text</string>
    <string name="type">Type</string>
	<string name="update">Update</string>
    <string name="yes">Yes</string>
	<string name="yes_as_pdf">Yes - As PDF</string>
	<string name="category_name">Name: </string>
	<string name="category_code">Code: </string>
	<string name="category_null">&lt;Category&gt;</string>
	<string name="category_null_code">NUL</string>
	<string name="category_airfare">Airfare</string>
	<string name="category_airfare_code">AIRP</string>
	<string name="category_breakfast">Breakfast</string>
	<string name="category_breakfast_code">BRFT</string>
	<string name="category_dinner">Dinner</string>
	<string name="category_dinner_code">DINN</string>
	<string name="category_entertainment">Entertainment</string>
	<string name="category_entertainment_code">ENT</string>
	<string name="category_gasoline">Gasoline</string>
	<string name="category_gasoline_code">GAS</string>
	<string name="category_gift">Gift</string>
	<string name="category_gift_code">GIFT</string>
	<string name="category_hotel">Hotel</string>
	<string name="category_hotel_code">HTL</string>
	<string name="category_laundry">Laundry</string>
	<string name="category_laundry_code">LAUN</string>
	<string name="category_lunch">Lunch</string>
	<string name="category_lunch_code">LNCH</string>
	<string name="category_other">Other</string>
	<string name="category_other_code">MISC</string>
	<string name="category_parking_tolls">Parking/Tolls</string>
	<string name="category_parking_tolls_code">PARK</string>
	<string name="category_postage_shipping">Postage/Shipping</string>
	<string name="category_postage_shipping_code">POST</string>
	<string name="category_car_rental">Car Rental</string>
	<string name="category_car_rental_code">RCAR</string>
	<string name="category_taxi_bus">Taxi/Bus</string>
	<string name="category_taxi_bus_code">TAXI</string>
	<string name="category_telephone_fax">Telephone/Fax</string>
	<string name="category_telephone_fax_code">TELE</string>
	<string name="category_tip">Tip</string>
	<string name="category_tip_code">TIP</string>
	<string name="category_train">Train</string>
	<string name="category_train_code">TRN</string>
	<string name="category_books_periodicals">Books/Periodicals</string>
	<string name="category_books_periodicals_code">ZBKP</string>
	<string name="category_cell_phone">Cell Phone</string>
	<string name="category_cell_phone_code">ZCEL</string>
	<string name="category_dues_subscriptions">Dues/Subscriptions</string>
	<string name="category_dues_subscriptions_code">ZDUE</string>
	<string name="category_meals_justified">Meals (Justified)</string>
	<string name="category_meals_justified_code">ZMEO</string>
	<string name="category_stationery_stations">Stationery/Stations</string>
	<string name="category_stationery_stations_code">ZSTS</string>
	<string name="category_training_fees">Training Fees</string>
	<string name="category_training_fees_code">ZTRN</string>
    <string name="menu_receiptimage_retake">Retake Photo</string>
    <string name="menu_receiptimage_rotate_ccw">Rotate CCW</string>
    <string name="menu_receiptimage_rotate_cw">Rotate CW</string>
    <string name="email_body_subject_5mb_warning">The following attachment is over 5MB in size and may not properly attach: %s</string>
    <string name="progress_import">Importing your files&#8230;</string>
    <string name="SD_ERROR">Error: Please make sure that your SD Card is available and not mounted to your computer.</string>
    <string name="SD_WARNING">Warning: Your SD Card is not available or is mounted to your computer. Some images may be inaccessible. Switching to internal storage&#8230;</string>
    <string name="DB_ERROR">Error: Another application is using the SQLite Database.</string>
    <string name="IMG_OPEN_ERROR">Error: The image is currently inaccessible or corrupted. Your SD Card may be unavailable or mounted to your computer. If not, click the menu button to retake the photo.</string>
    <string name="toast_pdf_open_error">Error: Failed to open the PDF. PDF viewing may not be supported on your platform.</string>
    <string name="IMG_SAVE_ERROR">Error: The Image Failed to Save Properly</string>
    <string name="toast_pdf_save_error">Error: The pdf failed to save properly.</string>
    <string name="toast_kitkat_security_error">Error: KitKat prevents direct imports of GMail attachments. You\'ll have to download the attachment first.</string>
    <string name="IMG_SEND_ERROR">Error: The Image was not properly sent to this app</string>
    <string name="ILLEGAL_CHAR_ERROR">Error: The name contains an illegal character</string>
    <string name="SPACE_ERROR">Error: The name cannot begin with a space</string>
    <string name="CALENDAR_TAB_ERROR">Error: Please Touch the Date TextBox to set the Date</string>
    <string name="DURATION_ERROR">Error: The Start Date Must Occur Prior To The End Date</string>
    <string name="EXPORT_ERROR">Error: Failed to properly export your data. Please make sure your phone is not mounted to your computer.</string>
    <string name="IMPORT_ERROR">Error: Failed to recognize the file as importable</string>
    <string name="MOVE_ERROR">Error: Failed to move the receipt</string>
    <string name="COPY_ERROR">Error: Failed to copy the receipt</string>
    <string name="toast_error_trip_exists">Error: An expense report with that name already exists</string>
    <string name="toast_error_category_exists">Error: An category with that name already exists</string>
    <string name="toast_error_invalid_input">Invalid Input</string>
    <string name="toast_error_password_protected_pdf">Error: Password-Protected PDF files cannot be included.</string>
     <string name="toast_receipt_copy">Successfully copied the receipt</string>
    <string name="DIALOG_RECEIPTMENU_HINT_NAME">Name</string>
    <string name="DIALOG_RECEIPTMENU_HINT_PRICE">Price (e.g. 150.00)</string>
    <string name="DIALOG_RECEIPTMENU_HINT_TAX">Tax</string>
    <string name="DIALOG_RECEIPTMENU_HINT_CURRENCY">Currency</string>
    <string name="DIALOG_RECEIPTMENU_HINT_DATE">Date</string>
    <string name="DIALOG_RECEIPTMENU_HINT_CATEGORY">Category</string>
    <string name="DIALOG_RECEIPTMENU_HINT_COMMENT">Comment</string>
    <string name="DIALOG_RECEIPTMENU_HINT_EXPENSABLE"> Expensable?</string>
    <string name="DIALOG_RECEIPTMENU_HINT_FULLPAGE"> Full-Page Image?</string>
    <string name="pref_receipt_header">Receipts</string>
    <string name="pref_receipt_customize_categories_key" translatable="false">CustomCategories</string>
    <string name="pref_receipt_customize_categories_title">Customize Receipt Categories</string>
    <string name="pref_receipt_customize_categories_summary">Tap here to add/edit your categories</string>
    <string name="pref_receipt_predict_categories_key" translatable="false">PredictCats</string>
    <string name="pref_receipt_predict_categories_title">Predict Receipt Categories</string>
    <string name="pref_receipt_predict_categories_summary">Auto-fill category based on prior data</string>
    <string name="pref_receipt_match_name_to_category_key" translatable="false">MatchNameCats</string>
    <string name="pref_receipt_match_name_to_category_title">Match Name to Category</string>
    <string name="pref_receipt_match_name_to_category_summary">Automatically set name to category</string>
    <string name="pref_receipt_match_comment_to_category_key" translatable="false">MatchCommentCats</string>
    <string name="pref_receipt_match_comment_to_category_title">Match Comment to Category</string>
    <string name="pref_receipt_match_comment_to_category_summary">Automatically set comment to category</string>
    <string name="pref_receipt_expensable_only_key" translatable="false">OnlyIncludeExpensable</string>
    <string name="pref_receipt_expensable_only_title">Only Report Expensable</string>
    <string name="pref_receipt_expensable_only_summary">Omit other receipts from output</string>
    <string name="pref_receipt_include_tax_field_key" translatable="false">IncludeTaxField</string>
    <string name="pref_receipt_include_tax_field_title">Include Tax Field</string>
    <string name="pref_receipt_include_tax_field_summary">Adds a line item for taxes</string>
    <string name="pref_receipt_tax_percent_key" translatable="false">TaxPercentage</string>
    <string name="pref_receipt_tax_percent_title">Default Tax Percentage</string>
    <string name="pref_receipt_pre_tax_key" translatable="false">PreTax</string>
    <string name="pref_receipt_pre_tax_title">Assume Price is Pre-Tax</string>
    <string name="pref_receipt_pre_tax_summary_on">Calculates Tax From a Pre-Tax Price</string>
    <string name="pref_receipt_pre_tax_summary_off">Calculates Tax From a Post-Tax Price</string>
    <string name="pref_receipt_enable_autocomplete_key" translatable="false">EnableAutoCompleteSuggestions</string>
    <string name="pref_receipt_enable_autocomplete_title">Enable AutoComplete Suggestions</string>
    <string name="pref_receipt_enable_autocomplete_summary">Suggest values from previous entries</string>
    <string name="pref_receipt_minimum_receipts_price_key" translatable="false">MinReceiptPrice</string>
    <string name="pref_receipt_minimum_receipts_price_title">Minimum Receipt Price</string>
    <string name="pref_receipt_default_to_report_start_date_key" translatable="false">DefaultToFirstReportDate</string>
    <string name="pref_receipt_default_to_report_start_date_title">Default to Report Start Date</string>
    <string name="pref_receipt_default_to_report_start_date_summary">Sets receipt date to match report date</string>
    <string name="pref_receipt_show_id_key" translatable="false">ShowReceiptID</string>
    <string name="pref_receipt_show_id_title">Show Receipt ID</string>
    <string name="pref_receipt_show_id_summary">Displays an auto-generated ID field</string>
</resources>