<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:padding="6dp">
    	<AutoCompleteTextView android:id="@+id/DIALOG_RECEIPTMENU_NAME"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/DIALOG_RECEIPTMENU_HINT_NAME" 
    		android:completionThreshold="1"
    		android:maxLength="50" />
    	<LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
	        <EditText android:id="@+id/DIALOG_RECEIPTMENU_PRICE"
			    android:inputType="number|numberSigned|numberDecimal"
			    android:layout_width="0dp" 
			    android:layout_height="wrap_content"
			    android:hint="@string/DIALOG_RECEIPTMENU_HINT_PRICE"
			    android:layout_weight=".45" />
	        <AutoCompleteTextView android:id="@+id/DIALOG_RECEIPTMENU_TAX"
			    android:inputType="number|numberSigned|numberDecimal"
			    android:layout_width="0dp" 
			    android:layout_height="wrap_content"
			    android:hint="@string/DIALOG_RECEIPTMENU_HINT_TAX"
			    android:visibility="gone"
			    android:completionThreshold="1"
			    android:layout_weight=".3" />
	        <Spinner android:id="@+id/DIALOG_RECEIPTMENU_CURRENCY"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:drawSelectorOnTop="true"
	            android:prompt="@string/DIALOG_RECEIPTMENU_HINT_CURRENCY"
			    android:layout_weight=".25" />
    	</LinearLayout>
    	<co.smartreceipts.android.date.DateEditText android:id="@+id/DIALOG_RECEIPTMENU_DATE"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/DIALOG_RECEIPTMENU_HINT_DATE" />
    	<Spinner android:id="@+id/DIALOG_RECEIPTMENU_CATEGORY"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:drawSelectorOnTop="true"
	            android:prompt="@string/DIALOG_RECEIPTMENU_HINT_CATEGORY" />
    	<EditText android:id="@+id/DIALOG_RECEIPTMENU_COMMENT"
			    android:layout_width="fill_parent" 
			    android:layout_height="0dip"
			    android:hint="@string/DIALOG_RECEIPTMENU_HINT_COMMENT"
			    android:layout_weight="1" />
    	<LinearLayout android:id="@+id/DIALOG_RECEIPTMENU_EXTRAS"
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content" />
    	<CheckBox android:id="@+id/DIALOG_RECEIPTMENU_EXPENSABLE"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/DIALOG_RECEIPTMENU_HINT_EXPENSABLE" />
    	<CheckBox android:id="@+id/DIALOG_RECEIPTMENU_FULLPAGE"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/DIALOG_RECEIPTMENU_HINT_FULLPAGE" />
    </LinearLayout>
</ScrollView>